[gd_scene load_steps=3 format=3 uid="uid://bwj5yx5aqjy4t"]

[ext_resource type="Script" path="res://scripts/mobile_controls.gd" id="1_mobile"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_joystick_base"]
bg_color = Color(0.2, 0.2, 0.2, 0.4)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[node name="MobileControls" type="CanvasLayer"]
layer = 100
script = ExtResource("1_mobile")

[node name="MobileControlsContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="JoystickBase" type="Panel" parent="MobileControlsContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 0
offset_left = 50.0
offset_top = 470.0
offset_right = 200.0
offset_bottom = 620.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_joystick_base")

[node name="JoystickTip" type="Panel" parent="MobileControlsContainer/JoystickBase"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(30, 30)

[node name="ColorRect" type="ColorRect" parent="MobileControlsContainer/JoystickBase/JoystickTip"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.5, 0.7, 1, 0.6)

[node name="ActionButtons" type="VBoxContainer" parent="MobileControlsContainer"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -180.0
offset_top = -200.0
offset_right = -30.0
offset_bottom = -50.0
grow_horizontal = 0
grow_vertical = 0
alignment = 2
